pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec__222-paragraphs.md.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 158
expression: "replace_system_specific_urls(render_to_string(markdown_file, &ansi_settings))"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/222-paragraphs.md
---
aaa bbb
